--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
-.App {
+/* .App {
   text-align: center;
-}
+} */
 .header{
   width:92%;
   height:30%;
   border:solid 4px #333;
   margin:1rem auto 0;
+  text-align:center;
 }
